# annalicia-back

./: .env  IMPLANTACAO_MULTIPLAS_CLINICAS.md  README.md  REGRAS.md  __init__ (1).py  __init__ (2).py  appointments.py  availability.py  blockouts.py  clear_db.py  dashboard.py  download (4)  limpar_clientes.py  main.py  migrate_numero.py  models.py  phone.py  professionals.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py  security.py  seed_bairros.py  services.py  settings.py  test_api.js  test_api.py  test_db.py  test_order.py  test_pydantic.py  users.py  webhooks.py  whatsapp.py  whatsapp_management.py
app/: config.py  dependencies.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  banners.py  categorias.py  clientes.py  configuracoes.py  pedidos.py  produtos.py  usuarios.py  whatsapp.py  zonas.py
app/services/: instagram.py  whatsapp.py
app/utils/: pix.py
